fixing the nav bar icons so they dont wrap down on smaller phones

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1795,7 +1795,7 @@ input, select, textarea {
 			width: 1em;
 			height: 1em;
 			line-height: 0.9em;
-			font-size: 2.5em;
+			font-size: 2.2em;
 			margin: 0 0.25em 0 0.25em;
 			opacity: 0.35;
 			outline: 0;
